[package]
name = "test-rustcrypto-mldsa"
version = "0.1.0"
edition = "2021"

[dependencies]
ml-dsa = { git = "https://github.com/RustCrypto/signatures", rev = "e7c698a094c2cca3e28bda0fab4684f21fc5363a" }
x509-cert = { git = "https://github.com/RustCrypto/formats.git", features = ["builder"] }
rand = "0.8"
der = { version = "0.8.0-rc.1", features = ["derive"] }
spki = {  version = "0.8.0-rc.1", features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false, features = ["compress"] }
signature = "2.3.0-pre.4"
const-oid = "0.10.0-rc.3"
hex = "0.4.3"
convert_case = "0.6.0"
quote = "1.0"
